# Finance

./: .gitignore  CMakeLists.txt  aapl_us_d.csv
src/: Statisitcs.h  TimeSeries.cpp  TimeSeries.h  main.cpp
tests/: CMakeLists.txt  StatisticsTests.cpp
utils/: CSVReader.hpp
